Working item sort mod.