@@ -2,18 +2,17 @@ package me.sweetpickleswine.chestmonstermanager.sorting;
 
 import me.sweetpickleswine.chestmonstermanager.ChestMonsterManager;
 import me.sweetpickleswine.chestmonstermanager.config.Config;
+import me.sweetpickleswine.chestmonstermanager.gui.SortButtonHelper;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.screen.ingame.GenericContainerScreen;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
-import net.minecraft.screen.Generic3x3ContainerScreenHandler;
-import net.minecraft.screen.ScreenHandler;
 import net.minecraft.screen.slot.Slot;
 import net.minecraft.screen.slot.SlotActionType;
 import net.minecraft.util.Pair;
 
+import java.awt.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -22,7 +21,7 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
     public T screenHandler;
     public ItemStack cursorStack;
 
-    private DoInclude doInclude = null;
+
 
     public List<PseudoSlot> newInv = new ArrayList<>();
     public InventoryActionTracker(T _screenHandler){
@@ -35,13 +34,14 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
         }
         actionHistory=new ArrayList<>();
     }
-    interface DoInclude{
-        boolean DoInclude(PseudoSlot slot);
+    public interface DoInclude{
+        boolean doInclude(PseudoSlot slot);
     }
     public InventoryActionTracker(T _screenHandler, DoInclude doInclude){
         this(_screenHandler);
-
-        newInv = newInv.stream().filter(doInclude::DoInclude).toList();
+        System.out.println(" " + newInv.size());
+        newInv = newInv.stream().filter(doInclude::doInclude).collect(Collectors.toList());
+        System.out.println(" " + newInv.size());
 
 
     }
@@ -59,10 +59,11 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
         for (PseudoSlot slot : newInv){
             int slotX = slot.x+x;
             int slotY = slot.y+y;
-            context.drawItem(slot.itemStack, slotX, slotY, slot.x + slot.y);
+
 
             if (!ItemStack.areEqual(screenHandler.slots.stream().filter((s) -> s.id == slot.id).toList().get(0).getStack(), slot.itemStack))
-                context.fill(slotX, slotY, slotX+16 ,slotY+16, 822018048);
+                context.fill(slotX, slotY, slotX+16 ,slotY+16, new Color(0, 255, 0, 60).getRGB());
+            context.drawItem(slot.itemStack, slotX, slotY, slot.x + slot.y);
 
             int count = slot.itemStack.getCount();
             if (count != 1)
@@ -72,9 +73,18 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
         int count = cursorStack.getCount();
         if (count != 1)
             context.drawItemInSlot(textRenderer, cursorStack, mouseX, mouseY, String.valueOf(count));
+
+        // Doesn't always work?????
+//        assert MinecraftClient.getInstance().player != null;
+//        MinecraftClient.getInstance().player.playerScreenHandler.slots.stream().filter((slot)->!SortButtonHelper.inInventoryIncludeSelector.doInclude(new PseudoSlot(slot))).forEach((slot -> {
+//            context.drawItem(slot.getStack(), slot.x+x, slot.y+y, slot.x + slot.y);
+//            int icount = slot.getStack().getCount();
+//            if (icount != 1)
+//                context.drawItemInSlot(textRenderer, slot.getStack(), slot.x+x, slot.y+y, String.valueOf(icount));
+//        }));
     }
     public List<Pair<Action, int[]>> actionHistory;
-    public InventoryActionTracker ClickSlot(int id){
+    public InventoryActionTracker<T> ClickSlot(int id){
         List<Pair<Action, int[]>> newActionHistory = new ArrayList<>(actionHistory);
         newActionHistory.add(new Pair<>(Action.CLICK_SLOT, new int[]{id}));
 
@@ -86,7 +96,7 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
                                     : slot.copy()
                     )).collect(Collectors.toList());
 
-            return new InventoryActionTracker(screenHandler, getSlotById(id).itemStack.copy(), newList, newActionHistory);
+            return new InventoryActionTracker<>(screenHandler, getSlotById(id).itemStack.copy(), newList, newActionHistory);
 
         }
         else if (getSlotById(id).itemStack.isEmpty()){
@@ -97,12 +107,13 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
                                     : slot.copy()
                     )).collect(Collectors.toList());
 
-            return new InventoryActionTracker(screenHandler, Items.AIR.getDefaultStack(), newList, newActionHistory);
+            return new InventoryActionTracker<>(screenHandler, Items.AIR.getDefaultStack(), newList, newActionHistory);
         } else{
             if (ItemStack.canCombine(getSlotById(id).itemStack, cursorStack)){
                 int newCount = getSlotById(id).itemStack.getCount() + cursorStack.getCount();
+
+                ItemStack newStack = cursorStack.copy();
                 if (newCount <= cursorStack.getMaxCount()){
-                    ItemStack newStack = cursorStack.copy();
                     newStack.setCount(newCount);
                     List<PseudoSlot> newList = newInv.stream().map(
                             (slot) -> (
@@ -110,9 +121,8 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
                                             : slot.copy()
                             )).collect(Collectors.toList());
 
-                    return new InventoryActionTracker(screenHandler, Items.AIR.getDefaultStack(), newList, newActionHistory);
+                    return new InventoryActionTracker<>(screenHandler, Items.AIR.getDefaultStack(), newList, newActionHistory);
                 }else{
-                    ItemStack newStack = cursorStack.copy();
                     newStack.setCount(cursorStack.getMaxCount());
                     List<PseudoSlot> newList = newInv.stream().map(
                             (slot) -> (
@@ -121,7 +131,7 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
                             )).collect(Collectors.toList());
                     ItemStack newCStack = cursorStack.copy();
                     newCStack.setCount(newCount-cursorStack.getMaxCount());
-                    return new InventoryActionTracker(screenHandler, newCStack, newList, newActionHistory);
+                    return new InventoryActionTracker<>(screenHandler, newCStack, newList, newActionHistory);
                 }
             }else{
                 ItemStack newStack = cursorStack.copy();
@@ -134,7 +144,7 @@ public class InventoryActionTracker<T extends net.minecraft.screen.ScreenHandler
                         )).collect(Collectors.toList());
 
 
-                return new InventoryActionTracker(screenHandler, newCStack, newList, newActionHistory);
+                return new InventoryActionTracker<>(screenHandler, newCStack, newList, newActionHistory);
             }
             }
 
